--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tern",
+  "name": "@visualbi/tern",
   "license": "MIT",
   "version": "0.24.2",
   "author": "Marijn Haverbeke <marijnh@gmail.com>",
@@ -14,7 +14,7 @@
     "test": "node ./bin/test"
   },
   "dependencies": {
-    "acorn": "^6.0.0",
+    "acorn": "^6.2.0",
     "acorn-walk": "^6.0.0",
     "acorn-loose": "^6.0.0",
     "enhanced-resolve": "^2.2.2",
